--- a/sobre.html
+++ b/sobre.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/sobre.css">
     <title>Sobre nós</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,6 +54,9 @@
     <p>Dada a importância econômica da empresa para o Brasil, a família Pelho já recebeu diversos prêmios,
         homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da Mirror
         Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.</p>
+    </section>
+    <section>  
+        <header>
     <h2 id="diferenciais">Diferenciais</h2>
     <ul>
         <li>Menor preço do varejo, garantido</li>
@@ -65,10 +69,11 @@
         <li>Presente em 124 países</li>
         <li>Mais de um milhão de funcionários em todo o mundo</li>
     </ul>
-    <div id="rodape">
+    </section>
+    <footer id="rodape">
         <img src="img/logo.png" alt="Logomarca">
         &copy; Copiright Mirror Fashion
-    </div>
+    </footer>
 </body>
 
 </html>
