--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/CSS/reset.css">
+    <link rel="stylesheet" href="estilo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
     <title>Nossa Loja</title>
 </head>
 
 <body>
-    <header>
-        <h1>
-            <img src="img/logo.png" alt="Mirror Fashion">
-        </h1>
-        <p class="sacola">Nenhum item na sacola</p>
+
+    <header class="container">
+        <h1><img src="IMG/logo.png" alt="Mirror Fashion"></h1>
+        <p class="sacola">Nenhum item na sacola </p>
         <nav class="menu-opcoes">
             <ul>
                 <li><a href="">Sua Conta</a></li>
@@ -28,7 +28,190 @@
                 <li><a href="">Ajuda</a></li>
             </ul>
         </nav>
+
     </header>
+
+    <div class="container destaque">
+
+        <section class="busca">
+            <form>
+                <input type="search">
+                <input type="image" src="IMG/busca.png">
+            </form>
+        </section>
+
+        <section class="menu-departamentos">
+            <h2>Departamentos</h2>
+            <nav>
+                <ul>
+                    <li><a href="#">Blusas e camisas</a></li>
+                    <li><a href="#">Calças</a></li>
+                    <li><a href="#">Saias</a></li>
+                    <li><a href="#">Vestidos</a></li>
+                    <li><a href="#">Sapatos</a></li>
+                    <li><a href="#">Bolsas e carteiras</a></li>
+                    <li><a href="#">Acessorios</a></li>
+                </ul>
+            </nav>
+        </section>
+        <img src="IMG/destaque-home.png" alt="Promoção: Big City Night">
+    </div>
+
+    <div class="container paineis">
+        <section class="painel novidades">
+            <h2>Novidades</h2>
+            <ol>
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="IMG/miniatura1.png">
+                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="IMG/miniatura2.png">
+                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="IMG/miniatura3.png">
+                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="IMG/miniatura4.png">
+                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="IMG/miniatura5.png">
+                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="IMG/miniatura6.png">
+                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+            </ol>
+
+        </section>
+
+    </div>
+
+
+    <div class="container paineis">
+        <section class="painel mais-vendidos">
+            <h2>Mais Vendidos</h2>
+            <ol>
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="IMG/miniatura7.png">
+                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="IMG/miniatura8.png">
+                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="IMG/miniatura9.png">
+                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="IMG/miniatura10.png">
+                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="IMG/miniatura11.png">
+                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="IMG/miniatura12.png">
+                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="IMG/miniatura13.png">
+                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="IMG/miniatura14.png">
+                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="produto.html">
+                        <figure>
+                            <img src="IMG/miniatura15.png">
+                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                        </figure>
+                    </a>
+                </li>
+
+            </ol>
+
+        </section>
+
+    </div>
 </body>
 
 </html>
