--- a/index.html
+++ b/index.html
@@ -1,217 +1,283 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/reset.css">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <title>Nossa Loja</title>
 </head>
 
 <body>
-
     <header class="container">
-        <h1><img src="IMG/logo.png" alt="Mirror Fashion"></h1>
-        <p class="sacola">Nenhum item na sacola </p>
+
+        <h1>
+            <img src="img/logo.png" alt="Mirror Fashion">
+        </h1>
+
+        <p class="sacola"> Nemhum item na sacola
+
+
+        </p>
         <nav class="menu-opcoes">
+
+
             <ul>
-                <li><a href="">Sua Conta</a></li>
+                <li><a href=""> Conta</a></li>
                 <li><a href="">Lista de Desejos</a></li>
                 <li><a href="">Cartão Fidelidade</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="">Ajuda</a></li>
+
             </ul>
+
         </nav>
 
+
+
+
     </header>
-
-    <div class="container destaque">
-
+    <main class="container destaque">
         <section class="busca">
             <form>
-                <input type="search">
-                <input type="image" src="IMG/busca.png">
+                <input type="search" name="search" placeholder="Pesquisar">
+                <input type="image" src="img/busca.png" alt="Botão buscar">
             </form>
+
         </section>
 
         <section class="menu-departamentos">
             <h2>Departamentos</h2>
             <nav>
                 <ul>
-                    <li><a href="#">Blusas e camisas</a></li>
+                    <li><a href="#">Blusas e Camisas</a></li>
                     <li><a href="#">Calças</a></li>
                     <li><a href="#">Saias</a></li>
                     <li><a href="#">Vestidos</a></li>
                     <li><a href="#">Sapatos</a></li>
                     <li><a href="#">Bolsas e carteiras</a></li>
-                    <li><a href="#">Acessorios</a></li>
+                    <li><a href="#">Acessórios</a></li>
                 </ul>
             </nav>
+
         </section>
-        <img src="IMG/destaque-home.png" alt="Promoção: Big City Night">
-    </div>
+
+        <img src="img/destaque-home.png" alt="Promoção">
+
+    </main>
 
     <div class="container paineis">
+
         <section class="painel novidades">
             <h2>Novidades</h2>
+
             <ol>
                 <li>
-                    <a href="produto.html">
+                    <a href="#">
                         <figure>
-                            <img src="IMG/miniatura1.png">
-                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                            <img src="img/produtos/miniatura1.png" alt="Produto">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
                         </figure>
+
+
                     </a>
+
                 </li>
 
                 <li>
-                    <a href="produto.html">
+                    <a href="#">
                         <figure>
-                            <img src="IMG/miniatura2.png">
-                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                            <img src="img/produtos/miniatura2.png" alt="Produto">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
                         </figure>
+
                     </a>
+
+                </li>
+                <li>
+                    <a href="#">
+                        <figure>
+                            <img src="img/produtos/miniatura3.png" alt="Produto">
+
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
+                        </figure>
+
+                    </a>
+
+                </li>
+                <li>
+                    <a href="#">
+                        <figure>
+                            <img src="img/produtos/miniatura4.png" alt="Produto">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
+                        </figure>
+
+                    </a>
+
+                </li>
+                <li>
+                    <a href="#">
+                        <figure>
+                            <img src="img/produtos/miniatura5.png" alt="Produto">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
+                        </figure>
+
+                    </a>
+
+                </li>
+                <li>
+                    <a href="#">
+                        <figure>
+                            <img src="img/produtos/miniatura6.png" alt="Produto">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
+                        </figure>
+
+                    </a>
+
                 </li>
 
-                <li>
-                    <a href="produto.html">
-                        <figure>
-                            <img src="IMG/miniatura3.png">
-                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
-                        </figure>
-                    </a>
-                </li>
 
-                <li>
-                    <a href="produto.html">
-                        <figure>
-                            <img src="IMG/miniatura4.png">
-                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
-                        </figure>
-                    </a>
-                </li>
 
-                <li>
-                    <a href="produto.html">
-                        <figure>
-                            <img src="IMG/miniatura5.png">
-                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
-                        </figure>
-                    </a>
-                </li>
 
-                <li>
-                    <a href="produto.html">
-                        <figure>
-                            <img src="IMG/miniatura6.png">
-                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
-                        </figure>
-                    </a>
-                </li>
+
+
 
             </ol>
 
+
         </section>
 
-    </div>
-
-
-    <div class="container paineis">
         <section class="painel mais-vendidos">
             <h2>Mais Vendidos</h2>
+
             <ol>
                 <li>
-                    <a href="produto.html">
+                    <a href="#">
                         <figure>
-                            <img src="IMG/miniatura7.png">
-                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
-                        </figure>
-                    </a>
-                </li>
+                            <img src="img/produtos/miniatura7.png" alt="">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
 
+                        </figure>
+
+
+                    </a>
+
+                </li>
                 <li>
-                    <a href="produto.html">
+                    <a href="#">
                         <figure>
-                            <img src="IMG/miniatura8.png">
-                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
-                        </figure>
-                    </a>
-                </li>
+                            <img src="img/produtos/miniatura8.png" alt="">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
 
+                        </figure>
+
+
+                    </a>
+
+                </li>
                 <li>
-                    <a href="produto.html">
+                    <a href="#">
                         <figure>
-                            <img src="IMG/miniatura9.png">
-                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
-                        </figure>
-                    </a>
-                </li>
+                            <img src="img/produtos/miniatura9.png" alt="">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
 
+                        </figure>
+
+
+                    </a>
+
+                </li>
+                </li>
                 <li>
-                    <a href="produto.html">
+                    <a href="#">
                         <figure>
-                            <img src="IMG/miniatura10.png">
-                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
-                        </figure>
-                    </a>
-                </li>
+                            <img src="img/produtos/miniatura10.png" alt="">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
 
+                        </figure>
+
+
+                    </a>
+
+                </li>
+                </li>
                 <li>
-                    <a href="produto.html">
+                    <a href="#">
                         <figure>
-                            <img src="IMG/miniatura11.png">
-                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
-                        </figure>
-                    </a>
-                </li>
+                            <img src="img/produtos/miniatura11.png" alt="">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
 
+                        </figure>
+
+
+                    </a>
+
+                </li>
+                </li>
                 <li>
-                    <a href="produto.html">
+                    <a href="#">
                         <figure>
-                            <img src="IMG/miniatura12.png">
-                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
+                            <img src="img/produtos/miniatura12.png" alt="">
+                            <figcaption>Fuzz Cardigan por R$129,90</figcaption>
+
                         </figure>
+
+
                     </a>
+
+                </li>
                 </li>
 
-                <li>
-                    <a href="produto.html">
-                        <figure>
-                            <img src="IMG/miniatura13.png">
-                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
-                        </figure>
-                    </a>
-                </li>
 
-                <li>
-                    <a href="produto.html">
-                        <figure>
-                            <img src="IMG/miniatura14.png">
-                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
-                        </figure>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="produto.html">
-                        <figure>
-                            <img src="IMG/miniatura15.png">
-                            <figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
-                        </figure>
-                    </a>
-                </li>
-
-            </ol>
 
         </section>
-
     </div>
+
+    <footer class="container">
+        <img src="img/logo-rodape.png" alt="Logomarma">
+
+        <ul class="social">
+
+            <li><a href="http://facebook.com">Facebook</a></li>
+            <li><a href="http://twitter.com">Twitter</a></li>
+            <li><a href="http://plus.google.com">Google+</a></li>
+
+        </ul>
+
+
+
+
+    </footer>
+
+
+
+
+
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
