--- a/cadastro.html
+++ b/cadastro.html
@@ -11,15 +11,14 @@
 <body>
     <header class="grid-header-container">
         <div class="top-left">
-            <h1>Cadastre-se!</h1>
-            <h2>Só hoje cadastro promocional!</h2>
+            <h1>Faça seu cadastro!</h1>
+            <h2>Cadastre-se para as promoções!</h2>
         </div>
         <div class="top-right">
-            <img src="/img/menino e menina.jpg" alt="Ícone de cadastro">
+            <img src="img/logocadastro.jpg" alt="logo de cadastro">
+        </div>
     </header>
-    </div>
     <form action="">
-
         <fieldset>
             <legend>Dados Pessoais</legend>
             <div class="grid-container">
@@ -27,34 +26,31 @@
                 <input type="text" name="nome" required>
                 <label for="email">E-mail</label>
                 <input type="email" name="email" required>
-                <label for="Data">Data de Nascimento</label>
-                <input type="date" name="date">
-                <label for="rg">RG</label>
-                <input type="text" name="rg" maxlength="13" minlength="4" title="Coloque seu RG completo" required>
-                <label for="cpf">CPF</label>
-                <input type="text" name="cpf" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" title="CPF no formato 000.000.000-00"
-                    required>
-
-
+                <label for="data">Data de Nascimento</label>
+                <input type="date" name="data" required>
+                <label for="RG">RG</label>
+                <input type="text" name="RG" maxlength="13" minlength="4" title="Coloque seu RG completo">
+                <label for="CPF">CPF</label>
+                <input type="text" name="CPF" pattern="\d{3}\.\d{3}\.\d{3}\-\{2}" maxlength="14"
+                    placeholder="_____._____._____-____" title="Digite apenas números">
             </div>
-
-
         </fieldset>
+
         <fieldset>
-            <Legend>Endereço</Legend>
+            <legend>Edereço</legend>
             <div class="grid-container">
                 <label for="Rua">Rua</label>
-                <input type="text" name="rua">
-                <label for="numero">Número</label>
+                <input type="text" name="Rua">
+                <label for="numero">Numero</label>
                 <input type="number" name="numero">
                 <label for="bairro">Bairro</label>
                 <input type="text" name="bairro">
-                <label for="cep">CEP</label>
-                <input type="text" name="cep" pattern="\d{5}-\d{3}" required>
-                <label for="cidade">Cidade</label>
-                <input type="text" name="cidade">
-                <label for="estado">Estado</label>
-                <select name=" estado">
+                <label for="CEP">CEP</label>
+                <input type="number" name="CEP" pattern="\d{5}-\d{3}" required title="Atenção ao formato solicitado">
+                <label for="Cidade">Cidade</label>
+                <input type="text" name="Cidade">
+                <label for="Estado">Estado</label>
+                <select name="Estados" id="">
                     <option value="" selected>Selecione um estado</option>
                     <option value="ac">Acre</option>
                     <option value="al">Alagoas</option>
@@ -83,47 +79,29 @@
                     <option value="se">Sergipe</option>
                     <option value="sp">São Paulo</option>
                     <option value="to">Tocantins</option>
-
                 </select>
-
             </div>
-
-
         </fieldset>
         <fieldset>
+
             <legend>Login</legend>
             <div class="grid-container">
-                <label for="imagem">Imagem de perfil</label>
-                <input type="file" name="imagem" accept="image/*" title="Apenas PNG, JPG, BMP, WEBP ou GIFs">
-                <label for="login">Login</label>
-                <input type="text" name="login" required>
+                <label for="Imagem">Imagem</label>
+                <input type="file" name="Imagem" accept="Image/*" title="Apenas PNG, JPG, BMP, WEBP">
+                <label for="Login">Login</label>
+                <input type="text" name="Login" required>
                 <label for="senha">Senha</label>
                 <input type="password" name="senha" minlength="8" required>
-                <label for="senhaConfirma">Confirmação de senha</label>
+                <label for="senhaConfirma">Confrimar senha</label>
                 <input type="password" name="senhaConfirma" minlength="8" required>
-
-
             </div>
-
-
-
-
-
-
-
         </fieldset>
 
         <div class="grid-button-container">
-
-            <input type="reset" value="Cancelar" name="botaoCancelar">
-
-            <input type="submit" value="Enviar" name="botaoenviar">
-
+            <input type="reset" value="Cancelar" name="BotaoCancelar">
+            <input type="submit" value="Enviar" name="Botão enviar">
         </div>
-
-
     </form>
-    <hr>
 </body>
 
 </html>
